[project]
name = "hordes-of-hell"
version = "2025.11.07"
dependencies = [
    "seaborn",
    "matplotlib",
    "numpy",
]
authors = [
  { name="Uplink036" },
  { name="s02blom" },
]
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "ruff",
]
